Update iac-create-environment.yml for Azure Pipelines

--- a/environment_setup/iac-create-environment.yml
+++ b/environment_setup/iac-create-environment.yml
@@ -16,7 +16,7 @@ variables:
 steps:
 - task: AzureResourceGroupDeployment@2
   inputs:
-    azureSubscription: 'AzureResourceConnection'
+    azureSubscription: 'AIRS sub'
     action: 'Create Or Update Resource Group'
     resourceGroupName: '$(BASE_NAME)-AML-RG'
     location: $(LOCATION)
